# MuSciClaim

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml  run_full.sh  run_smoke.sh
.github/: README.md
.github/workflows/: README.md  ci.yml
analysis/: README.md
configs/: README.md  models.example.yaml  models.yaml  run.example.yaml  run.yaml
docs/: README.md  experiment.md  plan.md
lora_exps/exp_a/: README.md
lora_exps/exp_a/adapter/: adapter_config.json
lora_exps/exp_b/: README.md
lora_exps/exp_c/: README.md
lora_exps/exp_d/: README.md
lora_exps/exp_e/: README.md
lora_exps/exp_e_v2/: README.md
lora_exps/exp_e_v2/adapter/: README.md
lora_exps/fold0_R_r16_a32/: eval_result.json
lora_runs/fold0_D_r16_a32/: README.md  eval_result.json  fold_info.json
lora_runs/fold1_D_r16_a32/: README.md  fold_info.json
lora_runs/fold2_D_r16_a32/: README.md  fold_info.json
lora_runs/fold3_D_r16_a32/: README.md  fold_info.json
lora_runs/fold4_D_r16_a32/: README.md  fold_info.json
runs/: README.md
scores/: README.md
scripts/: README.md  check_docstrings.py  check_readmes.py  eval_experiments.py  prepare_real_reasoning.py  qlora_eval.py  qlora_train.py  real_reasoning_data.jsonl  run_all_exps.sh  run_cv.sh  run_eval_cv.sh  run_eval_de.sh  run_fix.sh  run_fix_v2.sh  run_round2.sh  train_dpo.py  train_dpo_v2.py  train_experiments.py  wrong_predictions.jsonl
src/: README.md
src/musciclaim/: README.md  __init__.py  config.py  panels.py  parse.py  schema.py
tests/: README.md  test_bootstrap.py  test_metrics.py  test_panels.py  test_parse.py
(+61 files in other folders)
